# mullvadvpn-app-tests

./: .gitignore  .gitmodules  BUILD_BASE_IMAGE.md  BUILD_OS_IMAGE.md  Cargo.toml  Dockerfile  README.md  build.sh  ci-runtests-and-report.sh  ci-runtests.sh  container-run.sh  launch-guest.sh  openvpn.ca.crt  runtests.sh  start-debian-runner.sh  start-windows-runner.sh
docs/: REMOTE_MANAGEMENT.md
scripts/: build-harness.sh  build-runner-image.sh  build-windows-runner-image.sh  destroy-network.sh  setup-network.sh  ssh-setup.sh
src/: app.rs  main.rs  package.rs
src/client/tests/: mod.rs
src/server/: app.rs  meta.rs  mod.rs  mullvad_daemon.rs
src/tests/: mod.rs
systemd/: mullvadvpn-app-tests.service
test-manager/: Cargo.toml  build.rs
test-manager/src/: config.rs  container.rs  logging.rs  main.rs  mullvad_daemon.rs  network_monitor.rs  package.rs  run_tests.rs  summary.rs
test-manager/src/tests/: account.rs  config.rs  device.rs  dns.rs  helpers.rs  install.rs  mod.rs  normal_tests.rs  settings.rs  setup_teardown_tests.rs  test_metadata.rs  tunnel.rs  tunnel_state.rs  ui.rs
test-manager/src/vm/: mod.rs  network.rs  provision.rs  qemu.rs  ssh.rs  tart.rs  update.rs
test-manager/src/vm/network/: linux.rs  macos.rs  mod.rs
test-manager/test_macro/: Cargo.toml
test-manager/test_macro/src/: lib.rs
test-rpc/: Cargo.toml
test-rpc/src/: client.rs  lib.rs  logging.rs  meta.rs  mullvad_daemon.rs  net.rs  package.rs  serial.rs  transport.rs
test-runner/: Cargo.toml
test-runner/src/: app.rs  logging.rs  main.rs  mullvad_daemon.rs  net.rs  package.rs  sys.rs
