[package]
name = "test-tarpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
tokio-serde = { version = "*", features = ["bincode"] }
serde = "*"
bytes = "*"
hyper = { version = "*", features = ["client", "http2"] }
hyper-rustls = "0.23"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false
