[package]
name = "test-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
err-derive = "0.3.1"
bytes = "*"
test_macro = { path = "./test_macro" }

tokio-serde = { version = "*", features = ["json"] }
log = "0.4.17"
serde = "*"

pcap = { version = "0.10.1", features = ["capture-stream"] }
pnet_packet = "0.31.0"

talpid-types = { path = "../../mullvadvpn-app/talpid-types" }
mullvad-types = { path = "../../mullvadvpn-app/mullvad-types" }

test-rpc = { path = "../test-rpc" }

env_logger = "0.9"

tonic = "0.8"
tower = "0.4"
colored = "2.0.0"

# TODO: inject management interface versions
mullvad-management-interface = { path = "../../mullvadvpn-app/mullvad-management-interface" }
old-mullvad-management-interface = { package = "mullvad-management-interface", git = "https://github.com/mullvad/mullvadvpn-app", rev = "2022.5" }

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false
