[package]
name = "test-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
err-derive = "0.3.1"
bytes = "1.3.0"
test_macro = { path = "./test_macro" }
ipnetwork = "0.16"
once_cell = "1.16.0"
inventory = "0.1"

serde = "1.0"
tokio-serde = { version = "0.8.0", features = ["json"] }
log = "0.4.17"

pcap = { version = "0.10.1", features = ["capture-stream"] }
pnet_packet = "0.31.0"

test-rpc = { path = "../test-rpc" }

env_logger = "0.9"

tonic = "0.8"
tower = "0.4"
colored = "2.0.0"

mullvad-management-interface = { path = "../repos/mullvadvpn-app/mullvad-management-interface" }
old-mullvad-management-interface = { path = "../repos/old-mullvadvpn-app/mullvad-management-interface" }
talpid-types = { path = "../repos/mullvadvpn-app/talpid-types" }
mullvad-types = { path = "../repos/mullvadvpn-app/mullvad-types" }
mullvad-api = { path = "../repos/mullvadvpn-app/mullvad-api" }

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false
