[package]
name = "test-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
regex = "1"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
err-derive = "0.3.1"
bytes = "1.3.0"
test_macro = { path = "./test_macro" }
ipnetwork = "0.20"
once_cell = "1.16.0"
inventory = "0.1"
data-encoding-macro = "0.1.12"
itertools = "0.10.5"
libc = "0.2.14"
clap = { version = "4.1", features = ["derive"] }
async-tempfile = "0.2"
async-trait = "0.1"
uuid = "1.3"

serde = "1.0"
serde_json = "1.0"
tokio-serde = { version = "0.8.0", features = ["json"] }
log = "0.4.17"

pcap = { version = "0.10.1", features = ["capture-stream"] }
pnet_packet = "0.31.0"

test-rpc = { path = "../test-rpc" }

env_logger = "0.9"

tonic = "0.8"
tower = "0.4"
colored = "2.0.0"
mullvad-management-interface = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }
old-mullvad-management-interface = { git = "https://github.com/mullvad/mullvadvpn-app", rev = "2023.2", package = "mullvad-management-interface" }
talpid-types = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }
mullvad-types = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }
mullvad-api = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false
