[package]
name = "test-rpc"
version = "0.1.0"
edition = "2021"
description = "Supports IPC between test-runner and test-manager"

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
serde = "*"
tokio-serde = { version = "*", features = ["json"] }
serde_json = "*"
bytes = "*"
err-derive = "0.3.1"
log = "0.4.17"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false
