[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
bytes = "*"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
tokio-serde = { version = "*", features = ["json"] }
err-derive = "0.3.1"
log = "0.4.17"
lazy_static = "1.4.0"
serde = { version = "1.0" }
serde_json = "1.0"
parity-tokio-ipc = "0.9"
hyper = { version = "*", features = ["client", "http2"] }
hyper-rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "0.2"

mullvad-management-interface = { path = "../../mullvadvpn-app/mullvad-management-interface" }

test-rpc = { path = "../test-rpc" }

[target.'cfg(target_os = "windows")'.dependencies]
talpid-windows-net = { path = "../../mullvadvpn-app/talpid-windows-net" }
mullvad-paths = { path = "../../mullvadvpn-app/mullvad-paths" }

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.25", features = ["socket", "net"] }
