[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
tokio = { version = "1.0", features = ["macros", "rt", "process", "time", "fs", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.1"
err-derive = "0.3.1"
log = "0.4.17"
lazy_static = "1.4.0"
once_cell = "1.16.0"
parity-tokio-ipc = "0.9"
bytes = "1.3.0"
serde = { version = "1.0" }
serde_json = "1.0"
tokio-serde = { version = "0.8.0", features = ["json"] }

hyper = { version = "0.14.23", features = ["client", "http2"] }
hyper-rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "0.2"
mullvad-management-interface = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }
libc = "0.2"

test-rpc = { path = "../test-rpc" }
mullvad-paths = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }
talpid-platform-metadata = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }

[target."cfg(target_os=\"windows\")".dependencies]
talpid-windows-net = { git = "https://github.com/mullvad/mullvadvpn-app", branch = "main" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Shutdown",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
default-features = false

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.25", features = ["socket", "net"] }
rs-release = "0.1.7"
